--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -89,17 +89,17 @@ Specs are registered using https://clojure.github.io/spec.alpha/clojure.spec.alp
 
 [source,clojure]
 ----
-(s/def ::date inst?)
-(s/def ::suit #{:club :diamond :heart :spade})
+(s/def :order/date inst?)
+(s/def :deck/suit #{:club :diamond :heart :spade})
 ----
 
 A registered spec identifier can be used in place of a spec definition in the operations we've seen so far - `conform` and `valid?`.
 
 [source,clojure]
 ----
-(s/valid? ::date (java.util.Date.))
+(s/valid? :order/date (java.util.Date.))
 ;;=> true
-(s/conform ::suit :club)
+(s/conform :deck/suit :club)
 ;;=> :club
 ----
 
@@ -108,24 +108,22 @@ You will see later that registered specs can (and should) be used anywhere we co
 .Spec Names
 [IMPORTANT]
 ====
-In this guide we will often use auto-resolved keywords like `::date`. The Clojure reader resolves these to a fully-qualified keyword using the current namespace (`pass:[*ns*]`). You may also see some cases where a fully-qualified keyword like `:animal/dog` is used to name a spec.
-
-Generally, Clojure code should use keyword namespaces that are sufficiently unique such that they will not conflict with other spec users. If you are writing a library for public use, spec namespaces should include the project name, url, or organization such that you will not conflict. Within a private organization, you may be able to use shorter names - the important thing is that they are sufficiently unique to avoid conflicts.
+Spec names are always fully-qualified keywords. Generally, Clojure code should use keyword namespaces that are sufficiently unique such that they will not conflict with other spec users. If you are writing a library for public use, spec namespaces should include the project name, url, or organization such that you will not conflict. Within a private organization, you may be able to use shorter names - the important thing is that they are sufficiently unique to avoid conflicts.
 ====
 
 Once a spec has been added to the registry, `doc` knows how to find it and print it as well:
 
 [source,clojure]
 ----
-(doc ::date)
+(doc :order/date)
 -------------------------
-:user/date
+:order/date
 Spec
   inst?
 
-(doc ::suit)
+(doc :deck/suit)
 -------------------------
-:user/suit
+:deck/suit
 Spec
   #{:spade :heart :diamond :club}
 ----
@@ -136,21 +134,21 @@ The simplest way to compose specs is with https://clojure.github.io/spec.alpha/c
 
 [source,clojure]
 ----
-(s/def ::big-even (s/and int? even? #(> % 1000)))
-(s/valid? ::big-even :foo) ;; false
-(s/valid? ::big-even 10) ;; false
-(s/valid? ::big-even 100000) ;; true
+(s/def :num/big-even (s/and int? even? #(> % 1000)))
+(s/valid? :num/big-even :foo) ;; false
+(s/valid? :num/big-even 10) ;; false
+(s/valid? :num/big-even 100000) ;; true
 ----
 
 We can also use `s/or` to specify two alternatives: 
 
 [source,clojure]
 ----
-(s/def ::name-or-id (s/or :name string? 
-                          :id   int?))
-(s/valid? ::name-or-id "abc") ;; true
-(s/valid? ::name-or-id 100) ;; true
-(s/valid? ::name-or-id :foo) ;; false
+(s/def :domain/name-or-id (s/or :name string? 
+                                :id   int?))
+(s/valid? :domain/name-or-id "abc") ;; true
+(s/valid? :domain/name-or-id 100) ;; true
+(s/valid? :domain/name-or-id :foo) ;; false
 ----
 
 This `or` spec is the first case we've seen that involves a choice during validity checking. Each choice is annotated with a tag (here, between `:name` and `:id`) and those tags give the branches names that can be used to understand or enrich the data returned from `conform` and other spec functions.
@@ -159,9 +157,9 @@ When an `or` is conformed, it returns a vector with the tag name and conformed v
 
 [source,clojure]
 ----
-(s/conform ::name-or-id "abc")
+(s/conform :domain/name-or-id "abc")
 ;;=> [:name "abc"]
-(s/conform ::name-or-id 100)
+(s/conform :domain/name-or-id 100)
 ;;=> [:id 100]
 ----
 
@@ -181,13 +179,13 @@ https://clojure.github.io/spec.alpha/clojure.spec.alpha-api.html#clojure.spec.al
 
 [source,clojure]
 ----
-(s/explain ::suit 42)
-;; 42 - failed: #{:spade :heart :diamond :club} spec: :user/suit
-(s/explain ::big-even 5)
-;; 5 - failed: even? spec: :user/big-even
-(s/explain ::name-or-id :foo)
-;; :foo - failed: string? at: [:name] spec: :user/name-or-id
-;; :foo - failed: int? at: [:id] spec: :user/name-or-id
+(s/explain :deck/suit 42)
+;; 42 - failed: #{:spade :heart :diamond :club} spec: :deck/suit
+(s/explain :num/big-even 5)
+;; 5 - failed: even? spec: :num/big-even
+(s/explain :domain/name-or-id :foo)
+;; :foo - failed: string? at: [:name] spec: :domain/name-or-id
+;; :foo - failed: int? at: [:id] spec: :domain/name-or-id
 ----
 
 Let's examine the output of the final example more closely. First note that there are two errors being reported - spec will evaluate all possible alternatives and report errors on every path. The parts of each error are:
@@ -198,13 +196,13 @@ Let's examine the output of the final example more closely. First note that ther
 * predicate - the actual predicate that was not satisfied by val
 * in - the key path through a nested data val to the failing value. In this example, the top-level value is the one that is failing so this is essentially an empty path and is omitted.
 
-For the first reported error we can see that the value `:foo` did not satisfy the predicate `string?` at the path `:name` in the spec `::name-or-id`. The second reported error is similar but fails on the `:id` path instead. The actual value is a keyword so neither is a match.
+For the first reported error we can see that the value `:foo` did not satisfy the predicate `string?` at the path `:name` in the spec `:domain/name-or-id`. The second reported error is similar but fails on the `:id` path instead. The actual value is a keyword so neither is a match.
 
 In addition to `explain`, you can use https://clojure.github.io/spec.alpha/clojure.spec.alpha-api.html#clojure.spec.alpha/explain-str[`explain-str`] to receive the error messages as a string or  https://clojure.github.io/spec.alpha/clojure.spec.alpha-api.html#clojure.spec.alpha/explain-data[`explain-data`] to receive the errors as data.
 
 [source,clojure]
 ----
-(s/explain-data ::name-or-id :foo)
+(s/explain-data :domain/name-or-id :foo)
 ;;=> #:clojure.spec.alpha{
 ;;     :problems ({:path [:name], 
 ;;                 :pred string?,
@@ -235,53 +233,52 @@ Entity maps in spec are defined with https://clojure.github.io/spec.alpha/clojur
 
 [source,clojure]
 ----
-(ns my.domain (:require [clojure.spec.alpha :as s]))
 (def email-regex #"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,63}$")
-(s/def ::email-type (s/and string? #(re-matches email-regex %)))
+(s/def :acct/email-type (s/and string? #(re-matches email-regex %)))
 
-(s/def ::acctid int?)
-(s/def ::first-name string?)
-(s/def ::last-name string?)
-(s/def ::email ::email-type)
+(s/def :acct/acctid int?)
+(s/def :acct/first-name string?)
+(s/def :acct/last-name string?)
+(s/def :acct/email :acct/email-type)
 
-(s/def ::person (s/keys :req [::first-name ::last-name ::email]
-                        :opt [::phone]))
+(s/def :acct/person (s/keys :req [:acct/first-name :acct/last-name :acct/email]
+                            :opt [:acct/phone]))
 ----
 
-This registers a `::person` spec with the required keys `::first-name`, `::last-name`, and `::email`, with optional key `::phone`. The map spec never specifies the value spec for the attributes, only what attributes are required or optional.
+This registers a `:acct/person` spec with the required keys `:acct/first-name`, `:acct/last-name`, and `:acct/email`, with optional key `:acct/phone`. The map spec never specifies the value spec for the attributes, only what attributes are required or optional.
 
 When conformance is checked on a map, it does two things - checking that the required attributes are included, and checking that every registered key has a conforming value. We'll see later where optional attributes can be useful. Also note that ALL attributes are checked via `keys`, not just those listed in the `:req` and `:opt` keys. Thus a bare `(s/keys)` is valid and will check all attributes of a map without checking which keys are required or optional.
 
 [source,clojure]
 ----
-(s/valid? ::person
-  {::first-name "Bugs"
-   ::last-name "Bunny"
-   ::email "bugs@example.com"})
+(s/valid? :acct/person
+  {:acct/first-name "Bugs"
+   :acct/last-name "Bunny"
+   :acct/email "bugs@example.com"})
 ;;=> true
 
 ;; Fails required key check
-(s/explain ::person
-  {::first-name "Bugs"})
-;; #:my.domain{:first-name "Bugs"} - failed: (contains? % :my.domain/last-name) 
-;;   spec: :my.domain/person
-;; #:my.domain{:first-name "Bugs"} - failed: (contains? % :my.domain/email)
-;;   spec: :my.domain/person
+(s/explain :acct/person
+  {:acct/first-name "Bugs"})
+;; #:acct{:first-name "Bugs"} - failed: (contains? % :acct/last-name) 
+;;   spec: :acct/person
+;; #:acct{:first-name "Bugs"} - failed: (contains? % :acct/email)
+;;   spec: :acct/person
 
 ;; Fails attribute conformance
-(s/explain ::person
-  {::first-name "Bugs"
-   ::last-name "Bunny"
-   ::email "n/a"})
-;; "n/a" - failed: (re-matches email-regex %) in: [:my.domain/email]
-;;   at: [:my.domain/email] spec: :my.domain/email-type
+(s/explain :acct/person
+  {:acct/first-name "Bugs"
+   :acct/last-name "Bunny"
+   :acct/email "n/a"})
+;; "n/a" - failed: (re-matches email-regex %) in: [:acct/email]
+;;   at: [:acct/email] spec: :acct/email-type
 ----
 
 Let's take a moment to examine the explain error output on that final example:
 
 * in - the path within the data to the failing value (here, a key in the person instance)
 * val - the failing value, here `"n/a"`
-* spec - the spec that failed, here `:my.domain/email-type`
+* spec - the spec that failed, here `:acct/email-type`
 * at - the path in the spec where the failing value is located
 * predicate - the predicate that failed, here `(re-matches email-regex %)`
 
@@ -292,8 +289,8 @@ Let's consider a person map that uses unqualified keys but checks conformance ag
 [source,clojure]
 ----
 (s/def :unq/person 
-  (s/keys :req-un [::first-name ::last-name ::email]
-          :opt-un [::phone]))
+  (s/keys :req-un [:acct/first-name :acct/last-name :acct/email]
+          :opt-un [:acct/phone]))
 
 (s/conform :unq/person
   {:first-name "Bugs"
@@ -306,7 +303,7 @@ Let's consider a person map that uses unqualified keys but checks conformance ag
    :last-name "Bunny"
    :email "n/a"})
 ;; "n/a" - failed: (re-matches email-regex %) in: [:email] at: [:email] 
-;;   spec: :my.domain/email-type
+;;   spec: :acct/email-type
 
 (s/explain :unq/person
   {:first-name "Bugs"})
@@ -322,25 +319,28 @@ Unqualified keys can also be used to validate record attributes:
 
 (s/explain :unq/person
            (->Person "Bugs" nil nil nil))
-;; nil - failed: string? in: [:last-name] at: [:last-name] spec: :my.domain/last-name
-;; nil - failed: string? in: [:email] at: [:email] spec: :my.domain/email-type
+;; nil - failed: string? in: [:last-name] at: [:last-name] spec: :acct/last-name
+;; nil - failed: string? in: [:email] at: [:email] spec: :acct/email-type
 
 (s/conform :unq/person
   (->Person "Bugs" "Bunny" "bugs@example.com" nil))
-;;=> #my.domain.Person{:first-name "Bugs", :last-name "Bunny", 
-;;=>                   :email "bugs@example.com", :phone nil}
+;;=> #acct.Person{:first-name "Bugs", :last-name "Bunny", 
+;;=>              :email "bugs@example.com", :phone nil}
 ----
 
 One common occurrence in Clojure is the use of "keyword args" where keyword keys and values are passed in a sequential data structure as options. Spec provides special support for this pattern with the regex op https://clojure.github.io/spec.alpha/clojure.spec.alpha-api.html#clojure.spec.alpha/keys*[`keys*`]. `keys*` has the same syntax and semantics as `keys` but can be embedded inside a sequential regex structure.
 
 [source,clojure]
 ----
-(s/def ::port number?)
-(s/def ::host string?)
-(s/def ::id keyword?)
-(s/def ::server (s/keys* :req [::id ::host] :opt [::port]))
-(s/conform ::server [::id :s1 ::host "example.com" ::port 5555])
-;;=> {:my.domain/id :s1, :my.domain/host "example.com", :my.domain/port 5555}
+(s/def :my.config/port number?)
+(s/def :my.config/host string?)
+(s/def :my.config/id keyword?)
+(s/def :my.config/server (s/keys* :req [:my.config/id :my.config/host] 
+                                  :opt [:my.config/port]))
+(s/conform :my.config/server [:my.config/id :s1
+                              :my.config/host "example.com"
+                              :my.config/gport 5555])
+;;=> {:my.config//id :s1, :my.config/host "example.com", :my.config/port 5555}
 ----
 Sometimes it will be convenient to declare entity maps in parts, either because there are different sources for requirements on an entity map or because there is a common set of keys and variant-specific parts. The `s/merge` spec can be used to combine multiple `s/keys` specs into a single spec that combines their requirements. For example consider two `keys` specs that define common animal attributes and some dog-specific ones. The dog entity itself can be described as a `merge` of those two attribute sets:
 
@@ -457,15 +457,15 @@ Following is an example utilizing some of these options to spec a vector contain
 
 [source,clojure]
 ----
-(s/def ::vnum3 (s/coll-of number? :kind vector? :count 3 :distinct true :into #{}))
-(s/conform ::vnum3 [1 2 3])
+(s/def :ex/vnum3 (s/coll-of number? :kind vector? :count 3 :distinct true :into #{}))
+(s/conform :ex/vnum3 [1 2 3])
 ;;=> #{1 2 3}
-(s/explain ::vnum3 #{1 2 3})   ;; not a vector
-;; #{1 3 2} - failed: vector? spec: :user/vnum3
-(s/explain ::vnum3 [1 1 1])    ;; not distinct
-;; [1 1 1] - failed: distinct? spec: :user/vnum3
-(s/explain ::vnum3 [1 2 :a])   ;; not a number
-;; :a - failed: number? in: [2] spec: :user/vnum3
+(s/explain :ex/vnum3 #{1 2 3})   ;; not a vector
+;; #{1 3 2} - failed: vector? spec: :ex/vnum3
+(s/explain :ex/vnum3 [1 1 1])    ;; not distinct
+;; [1 1 1] - failed: distinct? spec: :ex/vnum3
+(s/explain :ex/vnum3 [1 2 :a])   ;; not a number
+;; :a - failed: number? in: [2] spec: :ex/vnum3
 ----
 
 [NOTE]
@@ -477,8 +477,8 @@ While `coll-of` is good for homogenous collections of any size, another case is 
 
 [source,clojure]
 ----
-(s/def ::point (s/tuple double? double? double?))
-(s/conform ::point [1.5 2.5 -0.5])
+(s/def :geom/point (s/tuple double? double? double?))
+(s/conform :geom/point [1.5 2.5 -0.5])
 => [1.5 2.5 -0.5]
 ----
 
@@ -500,8 +500,8 @@ In addition to the support for information maps via `keys`, spec also provides `
 
 [source,clojure]
 ----
-(s/def ::scores (s/map-of string? int?))
-(s/conform ::scores {"Sally" 1000, "Joe" 500})
+(s/def :game/scores (s/map-of string? int?))
+(s/conform :game/scores {"Sally" 1000, "Joe" 500})
 ;=> {"Sally" 1000, "Joe" 500}
 ----
 
@@ -525,8 +525,8 @@ Consider an ingredient represented by a vector containing a quantity (number) an
 
 [source,clojure]
 ----
-(s/def ::ingredient (s/cat :quantity number? :unit keyword?))
-(s/conform ::ingredient [2 :teaspoon])
+(s/def :cook/ingredient (s/cat :quantity number? :unit keyword?))
+(s/conform :cook/ingredient [2 :teaspoon])
 ;;=> {:quantity 2, :unit :teaspoon}
 ----
 
@@ -535,36 +535,36 @@ The data is conformed as a map with the tags as keys. We can use `explain` to ex
 [source,clojure]
 ----
 ;; pass string for unit instead of keyword
-(s/explain ::ingredient [11 "peaches"])
-;; "peaches" - failed: keyword? in: [1] at: [:unit] spec: :user/ingredient
+(s/explain :cook/ingredient [11 "peaches"])
+;; "peaches" - failed: keyword? in: [1] at: [:unit] spec: :cook/ingredient
 
 ;; leave out the unit
-(s/explain ::ingredient [2])
-;; () - failed: Insufficient input at: [:unit] spec: :user/ingredient
+(s/explain :cook/ingredient [2])
+;; () - failed: Insufficient input at: [:unit] spec: :cook/ingredient
 ----
 
 Let's now see the various occurrence operators `*`, `+`, and `?`:
 
 [source,clojure]
 ----
-(s/def ::seq-of-keywords (s/* keyword?))
-(s/conform ::seq-of-keywords [:a :b :c])
+(s/def :ex/seq-of-keywords (s/* keyword?))
+(s/conform :ex/seq-of-keywords [:a :b :c])
 ;;=> [:a :b :c]
-(s/explain ::seq-of-keywords [10 20])
-;; 10 - failed: keyword? in: [0] spec: :user/seq-of-keywords
+(s/explain :ex/seq-of-keywords [10 20])
+;; 10 - failed: keyword? in: [0] spec: :ex/seq-of-keywords
 
-(s/def ::odds-then-maybe-even (s/cat :odds (s/+ odd?)
-                                     :even (s/? even?)))
-(s/conform ::odds-then-maybe-even [1 3 5 100])
+(s/def :ex/odds-then-maybe-even (s/cat :odds (s/+ odd?)
+                                       :even (s/? even?)))
+(s/conform :ex/odds-then-maybe-even [1 3 5 100])
 ;;=> {:odds [1 3 5], :even 100}
-(s/conform ::odds-then-maybe-even [1])
+(s/conform :ex/odds-then-maybe-even [1])
 ;;=> {:odds [1]}
-(s/explain ::odds-then-maybe-even [100])
-;; 100 - failed: odd? in: [0] at: [:odds] spec: :user/odds-then-maybe-even
+(s/explain :ex/odds-then-maybe-even [100])
+;; 100 - failed: odd? in: [0] at: [:odds] spec: :ex/odds-then-maybe-even
 
 ;; opts are alternating keywords and booleans
-(s/def ::opts (s/* (s/cat :opt keyword? :val boolean?)))
-(s/conform ::opts [:silent? false :verbose true])
+(s/def :ex/opts (s/* (s/cat :opt keyword? :val boolean?)))
+(s/conform :ex/opts [:silent? false :verbose true])
 ;;=> [{:opt :silent?, :val false} {:opt :verbose, :val true}]
 ----
 
@@ -572,10 +572,10 @@ Finally, we can use `alt` to specify alternatives within the sequential data. Li
 
 [source,clojure]
 ----
-(s/def ::config (s/* 
-                  (s/cat :prop string?
-                         :val  (s/alt :s string? :b boolean?))))
-(s/conform ::config ["-server" "foo" "-verbose" true "-user" "joe"])
+(s/def :ex/config (s/* 
+                    (s/cat :prop string?
+                           :val  (s/alt :s string? :b boolean?))))
+(s/conform :ex/config ["-server" "foo" "-verbose" true "-user" "joe"])
 ;;=> [{:prop "-server", :val [:s "foo"]}
 ;;    {:prop "-verbose", :val [:b true]}
 ;;    {:prop "-user", :val [:s "joe"]}]
@@ -585,11 +585,11 @@ If you need a description of a specification, use `describe` to retrieve one. Le
 
 [source,clojure]
 ----
-(s/describe ::seq-of-keywords)
+(s/describe :ex/seq-of-keywords)
 ;;=> (* keyword?)
-(s/describe ::odds-then-maybe-even)
+(s/describe :ex/odds-then-maybe-even)
 ;;=> (cat :odds (+ odd?) :even (? even?))
-(s/describe ::opts)
+(s/describe :ex/opts)
 ;;=> (* (cat :opt keyword? :val boolean?))
 ----
 
@@ -597,11 +597,11 @@ Spec also defines one additional regex operator, https://clojure.github.io/spec.
 
 [source,clojure]
 ----
-(s/def ::even-strings (s/& (s/* string?) #(even? (count %))))
-(s/valid? ::even-strings ["a"])  ;; false
-(s/valid? ::even-strings ["a" "b"])  ;; true
-(s/valid? ::even-strings ["a" "b" "c"])  ;; false
-(s/valid? ::even-strings ["a" "b" "c" "d"])  ;; true
+(s/def :ex/even-strings (s/& (s/* string?) #(even? (count %))))
+(s/valid? :ex/even-strings ["a"])  ;; false
+(s/valid? :ex/even-strings ["a" "b"])  ;; true
+(s/valid? :ex/even-strings ["a" "b" "c"])  ;; false
+(s/valid? :ex/even-strings ["a" "b" "c" "d"])  ;; true
 ----
 
 When regex ops are combined, they describe a single sequence. If you need to spec a nested sequential collection,
@@ -611,12 +611,12 @@ you need nested regular expressions to describe the inner sequential data:
 
 [source,clojure]
 ----
-(s/def ::nested
+(s/def :ex/nested
   (s/cat :names-kw #{:names}
          :names (s/spec (s/* string?))
          :nums-kw #{:nums}
          :nums (s/spec (s/* number?))))
-(s/conform ::nested [:names ["a" "b"] :nums [1 2 3]])
+(s/conform :ex/nested [:names ["a" "b"] :nums [1 2 3]])
 ;;=> {:names-kw :names, :names ["a" "b"], :nums-kw :nums, :nums [1 2 3]}
 ----
 
@@ -624,12 +624,12 @@ If the specs were removed this spec would instead match a sequence like `[:names
 
 [source,clojure]
 ----
-(s/def ::unnested
+(s/def :ex/unnested
   (s/cat :names-kw #{:names}
          :names (s/* string?)
          :nums-kw #{:nums}
          :nums (s/* number?)))
-(s/conform ::unnested [:names "a" "b" :nums 1 2 3])
+(s/conform :ex/unnested [:names "a" "b" :nums 1 2 3])
 ;;=> {:names-kw :names, :names ["a" "b"], :nums-kw :nums, :nums [1 2 3]}
 ----
 
@@ -643,18 +643,20 @@ One way to use spec is to explicitly call `valid?` to verify input data passed t
 ----
 (defn person-name
   [person]
-  {:pre [(s/valid? ::person person)]
+  {:pre [(s/valid? :acct/person person)]
    :post [(s/valid? string? %)]}
-  (str (::first-name person) " " (::last-name person)))
+  (str (:acct/first-name person) " " (:acct/last-name person)))
 
 (person-name 42)
-;;=> java.lang.AssertionError: Assert failed: (s/valid? :my.domain/person person)
+;;=> java.lang.AssertionError: Assert failed: (s/valid? :acct/person person)
 
-(person-name {::first-name "Bugs" ::last-name "Bunny" ::email "bugs@example.com"})
+(person-name {:acct/first-name "Bugs" 
+              :acct/last-name "Bunny" 
+			  :acct/email "bugs@example.com"})
 ;; Bugs Bunny
 ----
 
-When the function is invoked with something that isn't valid `::person` data, the pre-condition fails. Similarly, if there was a bug in our code and the output was not a string, the post-condition would fail.
+When the function is invoked with something that isn't valid `:acct/person` data, the pre-condition fails. Similarly, if there was a bug in our code and the output was not a string, the post-condition would fail.
 
 Another option is to use `s/assert` within your code to assert that a value satisfies a spec. On success the value is returned and on failure an assertion error is thrown. By default assertion checking is off - this can be changed at the REPL with `s/check-asserts` or on startup by setting the system property `clojure.spec.check-asserts=true`.
 
@@ -662,8 +664,8 @@ Another option is to use `s/assert` within your code to assert that a value sati
 ----
 (defn person-name
   [person]
-  (let [p (s/assert ::person person)]
-    (str (::first-name p) " " (::last-name p))))
+  (let [p (s/assert :acct/person person)]
+    (str (:acct/first-name p) " " (:acct/last-name p))))
 
 (s/check-asserts true)
 (person-name 100)
@@ -682,9 +684,9 @@ Here we conform using the config specification defined above:
   (println "set" prop val))
 
 (defn configure [input]
-  (let [parsed (s/conform ::config input)]
+  (let [parsed (s/conform :ex/config input)]
     (if (= parsed ::s/invalid)
-      (throw (ex-info "Invalid input" (s/explain-data ::config input)))
+      (throw (ex-info "Invalid input" (s/explain-data :ex/config input)))
       (for [{prop :prop [_ val] :val} parsed]
         (set-config (subs prop 1) val)))))
 
@@ -809,16 +811,16 @@ Here's a bigger set of specs to model a game of cards:
 (def rank? (into #{:jack :queen :king :ace} (range 2 11)))
 (def deck (for [suit suit? rank rank?] [rank suit]))
 
-(s/def ::card (s/tuple rank? suit?))
-(s/def ::hand (s/* ::card))
+(s/def :game/card (s/tuple rank? suit?))
+(s/def :game/hand (s/* :deck/card))
 
-(s/def ::name string?)
-(s/def ::score int?)
-(s/def ::player (s/keys :req [::name ::score ::hand]))
+(s/def :game/name string?)
+(s/def :game/score int?)
+(s/def :game/player (s/keys :req [:game/name :game/score :game/hand]))
 
-(s/def ::players (s/* ::player))
-(s/def ::deck (s/* ::card))
-(s/def ::game (s/keys :req [::players ::deck]))
+(s/def :game/players (s/* :game/player))
+(s/def :game/deck (s/* :game/card))
+(s/def :game/game (s/keys :req [:game/players :game/deck]))
 ----
 
 We can validate a piece of this data against the schema:
@@ -826,10 +828,10 @@ We can validate a piece of this data against the schema:
 [source,clojure]
 ----
 (def kenny
-  {::name "Kenny Rogers"
-   ::score 100
-   ::hand []})
-(s/valid? ::player kenny)
+  {:game/name "Kenny Rogers"
+   :game/score 100
+   :game/hand []})
+(s/valid? :game/player kenny)
 ;;=> true
 ----
 
@@ -837,13 +839,13 @@ Or look at the errors we'll get from some bad data:
 
 [source,clojure]
 ----
-(s/explain ::game
-  {::deck deck
-   ::players [{::name "Kenny Rogers"
-               ::score 100
-               ::hand [[2 :banana]]}]})
-;; :banana - failed: suit? in: [:user/players 0 :user/hand 0 1] 
-;;   at: [:user/players :user/hand 1] spec: :user/card
+(s/explain :game/game
+  {:game/deck deck
+   :game/players [{:game/name "Kenny Rogers"
+                   :game/score 100
+                   :game/hand [[2 :banana]]}]})
+;; :banana - failed: suit? in: [:game/players 0 :game/hand 0 1] 
+;;   at: [:game/players :game/hand 1] spec: :game/card
 ----
 
 The error indicates the key path in the data structure down to the invalid value, the non-matching value, the spec part it's trying to match, the path in that spec, and the predicate that failed.
@@ -852,15 +854,15 @@ If we have a function `deal` that doles out some cards to the players we can spe
 
 [source,clojure]
 ----
-(defn total-cards [{:keys [::deck ::players] :as game}]
+(defn total-cards [{:keys [:game/deck :game/players] :as game}]
   (apply + (count deck)
-    (map #(-> % ::hand count) players)))
+    (map #(-> % :game/hand count) players)))
 
 (defn deal [game] .... )
 
 (s/fdef deal
-  :args (s/cat :game ::game)
-  :ret ::game
+  :args (s/cat :game :game/game)
+  :ret :game/game
   :fn #(= (total-cards (-> % :args :game))
           (total-cards (-> % :ret))))
 ----
@@ -948,17 +950,17 @@ What about generating a random player in our card game?
 
 [source,clojure]
 ----
-(gen/generate (s/gen ::player))
-;;=> {:spec.examples.guide/name "sAt8r6t",
-;;    :spec.examples.guide/score 233843,
-;;    :spec.examples.guide/hand ([8 :spade] [5 :heart] [9 :club] [3 :heart])}
+(gen/generate (s/gen :game/player))
+;;=> {:game/name "sAt8r6t",
+;;    :game/score 233843,
+;;    :game/hand ([8 :spade] [5 :heart] [9 :club] [3 :heart])}
 ----
 
 What about generating a whole game?
 
 [source,clojure]
 ----
-(gen/generate (s/gen ::game))
+(gen/generate (s/gen :game/game))
 ;; it works! but the output is really long, so not including it here
 ----
 
@@ -1070,9 +1072,9 @@ First consider a spec with a predicate to specify keywords from a particular nam
 
 [source,clojure]
 ----
-(s/def ::kws (s/and keyword? #(= (namespace %) "my.domain")))
-(s/valid? ::kws :my.domain/name) ;; true
-(gen/sample (s/gen ::kws)) ;; unlikely we'll generate useful keywords this way
+(s/def :ex/kws (s/and keyword? #(= (namespace %) "my.domain")))
+(s/valid? :ex/kws :my.domain/name) ;; true
+(gen/sample (s/gen :ex/kws)) ;; unlikely we'll generate useful keywords this way
 ----
 
 The simplest way to start generating values for this spec is to have spec create a generator from a fixed set of options. A set is a valid predicate spec so we can create one and ask for it's generator:
@@ -1088,10 +1090,10 @@ To redefine our spec using this custom generator, use https://clojure.github.io/
 
 [source,clojure]
 ----
-(s/def ::kws (s/with-gen (s/and keyword? #(= (namespace %) "my.domain"))
-               #(s/gen #{:my.domain/name :my.domain/occupation :my.domain/id})))
-(s/valid? ::kws :my.domain/name)  ;; true
-(gen/sample (s/gen ::kws))
+(s/def :ex/kws (s/with-gen (s/and keyword? #(= (namespace %) "my.domain"))
+                 #(s/gen #{:my.domain/name :my.domain/occupation :my.domain/id})))
+(s/valid? :ex/kws :my.domain/name)  ;; true
+(gen/sample (s/gen :ex/kws))
 ;;=> (:my.domain/occupation :my.domain/occupation :my.domain/name  ...)
 ----
 
@@ -1132,11 +1134,11 @@ Returning to our "hello" example, we now have the tools to make that generator:
 
 [source,clojure]
 ----
-(s/def ::hello
+(s/def :ex/hello
   (s/with-gen #(clojure.string/includes? % "hello")
     #(gen/fmap (fn [[s1 s2]] (str s1 "hello" s2))
       (gen/tuple (gen/string-alphanumeric) (gen/string-alphanumeric)))))
-(gen/sample (s/gen ::hello))
+(gen/sample (s/gen :ex/hello))
 ;;=> ("hello" "ehello3" "eShelloO1" "vhello31p" "hello" "1Xhellow" "S5bhello" "aRejhellorAJ7Yj" "3hellowPMDOgv7" "UhelloIx9E")
 ----
 
@@ -1150,8 +1152,8 @@ For example, in the case of a range of integer values (for example, a bowling ro
 
 [source,clojure]
 ----
-(s/def ::roll (s/int-in 0 11))
-(gen/sample (s/gen ::roll))
+(s/def :bolwing/roll (s/int-in 0 11))
+(gen/sample (s/gen :bowling/roll))
 ;;=> (1 0 0 3 1 7 10 1 5 0)
 ----
 
@@ -1159,8 +1161,8 @@ spec also includes https://clojure.github.io/spec.alpha/clojure.spec.alpha-api.h
 
 [source,clojure]
 ----
-(s/def ::the-aughts (s/inst-in #inst "2000" #inst "2010"))
-(drop 50 (gen/sample (s/gen ::the-aughts) 55))
+(s/def :ex/the-aughts (s/inst-in #inst "2000" #inst "2010"))
+(drop 50 (gen/sample (s/gen :ex/the-aughts) 55))
 ;;=> (#inst"2005-03-03T08:40:05.393-00:00"
 ;;    #inst"2008-06-13T01:56:02.424-00:00"
 ;;    #inst"2000-01-01T00:00:00.610-00:00"
@@ -1174,12 +1176,12 @@ Finally, https://clojure.github.io/spec.alpha/clojure.spec.alpha-api.html#clojur
 
 [source,clojure]
 ----
-(s/def ::dubs (s/double-in :min -100.0 :max 100.0 :NaN? false :infinite? false))
-(s/valid? ::dubs 2.9)
+(s/def :ex/dubs (s/double-in :min -100.0 :max 100.0 :NaN? false :infinite? false))
+(s/valid? :ex/dubs 2.9)
 ;;=> true
-(s/valid? ::dubs Double/POSITIVE_INFINITY)
+(s/valid? :ex/dubs Double/POSITIVE_INFINITY)
 ;;=> false
-(gen/sample (s/gen ::dubs))
+(gen/sample (s/gen :ex/dubs))
 ;;=> (-1.0 -1.0 -1.5 1.25 -0.5 -1.0 -3.125 -1.5625 1.25 -0.390625)
 ----
 
@@ -1303,7 +1305,7 @@ Consider the case where we have a low-level function that invokes a remote servi
   )
 
 (defn run-query [service query]
-  (let [{::keys [result error]} (invoke-service service {::query query})]
+  (let [{:svc/keys [result error]} (invoke-service service {:svc/query query})]
     (or result error)))
 ----
 
@@ -1311,20 +1313,20 @@ We can spec these functions using the following specs:
 
 [source,clojure]
 ----
-(s/def ::query string?)
-(s/def ::request (s/keys :req [::query]))
-(s/def ::result (s/coll-of string? :gen-max 3))
-(s/def ::error int?)
-(s/def ::response (s/or :ok (s/keys :req [::result])
-                    :err (s/keys :req [::error])))
+(s/def :svc/query string?)
+(s/def :svc/request (s/keys :req [:svc/query]))
+(s/def :svc/result (s/coll-of string? :gen-max 3))
+(s/def :svc/error int?)
+(s/def :svc/response (s/or :ok (s/keys :req [:svc/result])
+                          :err (s/keys :req [:svc/error])))
 
 (s/fdef invoke-service
-  :args (s/cat :service any? :request ::request)
-  :ret ::response)
+  :args (s/cat :service any? :request :svc/request)
+  :ret :svc/response)
 
 (s/fdef run-query
   :args (s/cat :service any? :query string?)
-  :ret (s/or :ok ::result :err ::error))
+  :ret (s/or :ok :svc/result :err :svc/error))
 ----
 
 And then we want to test the behavior of `run-query` while stubbing out `invoke-service` with `instrument` so that the remote service is not invoked:
@@ -1333,9 +1335,9 @@ And then we want to test the behavior of `run-query` while stubbing out `invoke-
 ----
 (stest/instrument `invoke-service {:stub #{`invoke-service}})
 ;;=> [spec.examples.guide/invoke-service]
-(invoke-service nil {::query "test"})
+(invoke-service nil {:svc/query "test"})
 ;;=> #:spec.examples.guide{:error -11}
-(invoke-service nil {::query "test"})
+(invoke-service nil {:svc/query "test"})
 ;;=> #:spec.examples.guide{:result ["kq0H4yv08pLl4QkVH8" "in6gH64gI0ARefv3k9Z5Fi23720gc"]}
 (stest/summarize-results (stest/check `run-query))
 ;;=> {:total 1, :check-passed 1}
